--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ background-color:darkgreen;color:white;display:inline-block;border-radius:0.5em;
 <div style="text-align:center;font-style:italic;color:#8B0000;">&quot;&nbsp;Om saravana bhava &nbsp;&quot;</div>
 <div style="text-align:center;color:maroon;">In god we trust</div>
 </div>
-<h3 style="text-align:center;padding:0.5em 1em;margin:0.5em auto;color:black;font-weight:normal;font-style:italic;">&quot;&nbsp; We business friendly organization working in the consumer food safety & standards space &nbsp;&quot;</h3>
+<h3 style="text-align:center;padding:0.5em 1em;margin:0.5em auto;color:black;font-weight:normal;font-style:italic;">&quot;&nbsp; We are a business friendly organization working in the consumer food safety & standards space &nbsp;&quot;</h3>
 <a style="color:black;text-decoration:underline;" href="team.html" target="_blank">
 <span style="background-color:maroon;padding:0.3em;border-radius:1em;">&#128070;</span> D. Senthil Rajkumar
 </a>
