--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ background-color:darkgreen;color:white;display:inline-block;border-radius:0.5em;
 <div id="md" style="padding:0.5em;color:grey;font-size:smaller;font-style:italic;text-decoration:none;">Founder & Chief Executive</div>
 
 <ul style="margin:1em;text-align:left;">
+<li>The information shared with us will be used in favor of the sharing people & organizations</li>
+<li>Complete confidentiality, privacy & trust</li>
 <li style="list-style-type:'&#10029; ';border-top:solid thin grey;border-bottom:solid thin grey;">For information, enquires, appointments email us at dsr_sbs@yahoo.com</li>
 <li>Chennai, India</li>
 <li style="font-size:small;">To speak to us send an sms / email requesting callback or request an appointment</li>
